Added js to bottom

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
   <link rel="stylesheet" href="css.css">
-  <script type="text/javascript" src="js.js"></script>
 </head>
 <body>
 
@@ -17,9 +16,6 @@
     </div>
 
 
-  <script>
-
-
-  </script>
+<script src="js.js"></script>
 </body>
 </html>
